# ross

./: .gitignore  CMakeLists.txt  README.md
ross/: CMakeLists.txt  folderchanges.cpp  folderchanges.h  main.cpp  paths.cpp  paths.h  pathwatcher.cpp  pathwatcher.h
ross/model/: eventmodel.cpp  eventmodel.h  pathmodel.cpp  pathmodel.h
ross/qml/: RossStyles.qml  main.qml  qml.qrc
ross/qml/components/: Buttons.qml  EventTable.qml  EventTableItem.qml  Header.qml  Page.qml  PathButton.qml  SwitchButton.qml  WatchedPathListItem.qml  WatchedPaths.qml  WatchedPathsList.qml
ross/qml/items/: RButton.qml  RText.qml
